Adding daily alias to .gitconfig

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,7 @@
-[alias]
-  lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
-
 [user]
 	name = souovan
 	email = souovan@protonmail.com
+
+[alias]
+  lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+	daily = !sh -c 'git log --since=yesterday --format=oneline --author=souovan'
