--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,10 @@
 [user]
-	name = souovan
+  name = souovan
 	email = souovan@protonmail.com
-
+	signingkey = BE135805A384804D
 [alias]
   lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
-	daily = !sh -c 'git log --since=yesterday --format=oneline --author=souovan'
+  daily = !sh -c 'git log --since=yesterday --format=oneline --author=souovan'
+
+[commit]
+	gpgsign = true
