--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -71,7 +71,7 @@ font-0 = FontAwesome:style=Regular;pixelsize=10;1
 font-1 = unifont:fontformat=truetype:size=8:antialias=true;0
 font-2 = siji:pixelsize=10;1
 
-modules-left = bspwm i3 xwindow
+modules-left = bspwm help i3 xwindow
 modules-center = mpd date
 #modules-right = filesystem xbacklight pulseaudio xkeyboard memory cpu wlan eth battery temperature date powermenu
 modules-right = xbacklight pulseaudio xkeyboard
@@ -178,6 +178,13 @@ label-urgent-padding = 2
 ; Separator in between workspaces
 ; label-separator = |
 
+[module/help]
+type = custom/script
+exec = echo " "
+interval = 300
+format-prefix = " "
+format-prefix-foreground = #50fa7b
+click-left = ~/bin/rofi-i3-show-help
 
 [module/mpd]
 type = internal/mpd
