Updating tmux conf

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -32,8 +32,8 @@ set -g default-terminal "screen-256color"
 #set -g mouse on
 
 set-option -g status-left "\
-#[fg=green, bg=black]#{?client_prefix,#[bg=black],} #S \
-#[fg=green, bg=black]#{?client_prefix,#[fg=green],}#{?window_zoomed_flag, 🔍,}"
+#[fg=white, bg=black]#{?client_prefix,#[bg=red],} #S \
+#[fg=white, bg=black]#{?client_prefix,#[fg=white],}#{?window_zoomed_flag, 🔍,}"
 
 #-------------#
 # Left panels #
